[gd_scene load_steps=4 format=3 uid="uid://bxy08aadef123"]

[ext_resource type="Script" path="res://Scripts/enemy3d.gd" id="1_enemy3d"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.3
height = 1.6

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.3
height = 1.6

[node name="Enemy3D" type="CharacterBody3D"]
script = ExtResource("1_enemy3d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_1")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -25.0
offset_top = -90.0
offset_right = 25.0
offset_bottom = -70.0
value = 100.0
show_percentage = false

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
